--- a/raon-control/timeleap.css
+++ b/raon-control/timeleap.css
@@ -9,6 +9,7 @@
     float: left;
     width: 420px;
     height: 980px;
+    overflow: auto;
 }
 
 #body-right {
@@ -165,9 +166,13 @@ button {
 
 .schedule-day-title {
     display: inline-block;
+    width: 220px;
     font-size: 18px;
     font-weight: bold;
     margin-left: 15px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .schedule-day-detail {
@@ -303,17 +308,17 @@ button {
   
   /* Track */
   ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey; 
+    box-shadow: inset 0 0 5px #154360; 
     border-radius: 10px;
   }
    
   /* Handle */
   ::-webkit-scrollbar-thumb {
-    background: #34495E; 
+    background: #004060; 
     border-radius: 10px;
   }
   
   /* Handle on hover */
   ::-webkit-scrollbar-thumb:hover {
-    background: #34495E; 
+    background: #004060; 
   }
