--- a/raon-control/timeleap.css
+++ b/raon-control/timeleap.css
@@ -202,6 +202,7 @@ button {
 }
 
 #button-group {
+    visibility: hidden;
     position: absolute;
     right: 0px;
     top: 3px;
@@ -212,9 +213,9 @@ button {
 }
 
 .config-button {
-    width: 80px;
+    width: 100px;
     height: 30px;
-    border: 2px solid #34495E;
+    border: 2px solid #004060;
     border-radius: 0px;
     text-align: center;
     text-decoration: none;
@@ -226,7 +227,7 @@ button {
 }
 
 .config-button:hover {
-    background-color: #34495E;
+    background-color: #004060;
 }
 
 #record-table {
