--- a/raon-control/timeleap.css
+++ b/raon-control/timeleap.css
@@ -226,7 +226,7 @@ button {
     font-family: "Roboto-Thin";
 }
 
-.config-button:hover {
+.record-config-button:hover {
     background-color: #004060;
 }
 
@@ -275,17 +275,16 @@ button {
 #snapshot-compare-table {
     border-collapse: separate;
     border-spacing: 0 3px;
-    width: 700px;
+    width: 800px;
     font-size: 18px;
     margin: auto;
     margin-top: 10px;
     background-color: black;
-
 }
 
-#snapshot-compare-table th{
+#snapshot-compare-table th {
     color: white;
-    background-color: #009FCA;
+    background-color: #9B59B6;
     height: 28px;
     text-align: center;
 }
@@ -304,12 +303,12 @@ button {
     background-color: #1d1d1d;
 }
 
-#snapshot-compare-table td:nth-child(1) {
+#snapshot-compare-table td:nth-child(2) {
     padding-left: 10px;
     text-align: left;
 }
 
-#snapshot-list-contain {
+#snapshot-list-body {
     display: none;
     position: fixed;
     left: 0;
@@ -317,9 +316,62 @@ button {
     width: 100%;
     height: 100%;
     z-index: 100;
-    background: rgba(255,255,255,0.05);
-    backdrop-filter: blur(10px);
+    background: rgba(255, 255, 255, 0.05);
+    backdrop-filter: blur(0px);
+    /* transition: all 1s; */
     overflow: auto;
+}
+
+/* #snapshot-list-body:hover {
+    backdrop-filter: blur(10px);
+} */
+
+#snapshot-list-button {
+    position: absolute;
+    right: 0px;
+    top: 3px;
+    display: flex;
+    width: 500px;
+    height: 30px;
+    justify-content: flex-end;
+}
+
+.snapshot-list-config-button {
+    width: 80px;
+    height: 30px;
+    margin-left: 10px;
+    border: 2px solid #9B59B6;
+    border-radius: 0px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 14px;
+    cursor: pointer;
+    background-color: transparent;
+    transition-duration: 0.4s;
+    font-family: "Roboto-Thin";
+}
+
+.snapshot-list-config-button:hover {
+    background-color: #9B59B6;
+}
+
+.show-snapshot-list-button {
+    width: 80px;
+    height: 30px;
+    margin-left: 10px;
+    border: 2px solid #9B59B6;
+    border-radius: 0px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 14px;
+    cursor: pointer;
+    background-color: transparent;
+    transition-duration: 0.4s;
+    font-family: "Roboto-Thin";
+}
+
+.show-snapshot-list-button:hover {
+    background-color: #9B59B6;
 }
 
 @keyframes bar-animation {
