--- a/raon-control/main.css
+++ b/raon-control/main.css
@@ -211,10 +211,10 @@
     position: relative;
     left: 30px;
     top: 15px;
-    width: 18px;
+    width: 20px;
     height: 120px;
-    background-color: rgba(0, 64, 96, 0.5);
-    border: 1px solid rgba(0, 84, 188, 0.5);
+    /* background-color: rgba(0, 64, 96, 0.5); */
+    /* border: 1px solid rgba(0, 84, 188, 0.5); */
     overflow: hidden;
 }
 
@@ -222,9 +222,10 @@
     position: relative;
     left: 1px;
     top: var(--i);
-    width: 16px;
+    width: 18px;
     height: 6px;
-    opacity: 0.0;
+    border-radius: 2px;
+    opacity: 0.05;
     transition: opacity 0.5s;
     transition-delay: var(--tDelay);
 }
