--- a/raon-control/main.css
+++ b/raon-control/main.css
@@ -218,7 +218,7 @@
     overflow: hidden;
 }
 
-.temperature-level1, .temperature-level2 {
+.temperature-level1 {
     position: relative;
     left: 1px;
     top: var(--i);
@@ -228,6 +228,20 @@
     opacity: 0.05;
     transition: opacity 0.5s;
     transition-delay: var(--tDelay);
+    background-color: #00a99d;
+}
+
+.temperature-level2 {
+    position: relative;
+    left: 1px;
+    top: var(--i);
+    width: 18px;
+    height: 6px;
+    border-radius: 2px;
+    opacity: 0.05;
+    transition: opacity 0.5s;
+    transition-delay: var(--tDelay);
+    background-color: #00b1e8;
 }
 
 #temperature1::after, #temperature2::after {
