--- a/raon-control/timeleap.css
+++ b/raon-control/timeleap.css
@@ -128,6 +128,7 @@ button {
 
 
 #event-button-container {
+    visibility: hidden;
     position: absolute;
     right: 25px;
     top: 3px;
@@ -135,6 +136,7 @@ button {
     width: 500px;
     height: 30px;
     justify-content: flex-end;
+    align-items:flex-end;
 }
 
 .event-config-button {
