--- a/raon-control/document.css
+++ b/raon-control/document.css
@@ -1,98 +1,63 @@
 body {
-  overflow: visible;
+    overflow: visible;
 }
 
-.container {
-    position: relative;
-    animation: animatebottom 1s;
-    margin-top: 50px;
-    bottom: -100px;
-    opacity: 0;
-    animation-fill-mode: forwards;
-}
-
-.letter {
-    width: 1000px;
-    margin: auto;
+#page-title {
+    font-size: 36px;
+    color: white;
     text-align: center;
-    font-size: 24px;
-    color: lightgray;
-    position: relative;
 }
 
-.console-window {
+#page-abstract {
     width: 1000px;
     margin: auto;
-    border: 1px solid #3d3d3d;
-    border-radius: 5px;
-    background-color: #2d2d2d;
+    margin-top: 20px;
+    font-size: 21px;
+    color: #B3B3B3;
+    text-align: center;
 }
 
-.console-title {
-    width: 980px;
-    margin-left: 10px;
-    margin-top: 4px;
-    background-color: #2d2d2d;
+#classification {
+    width: 800px;
+    margin: auto;
+    margin-top: 30px;
+    display: flex;
+    justify-content: space-evenly;
 }
 
-.console-body {
-    width: 978px;
-    margin-left: 1px;
-    padding: 10px;
-    background-color: white;
-    border-radius: 0px 0px 3px 3px;
-    /* margin: 10px; */
-    font-size: 20px;
-    line-height: 8px;
+.checkbox-container {
+    display: block;
+    position: relative;
+    width: 100px;
+    height: 30px;
+    padding-left: 24px;
+    /* margin-bottom: 10px; */
+    font-size: 18px;
+    /* background-color: rebeccapurple; */
+    color: white
 }
 
-.title-button {
-    height: 12px;
-    width: 12px;
-    margin: 2px;
-    border-radius: 50%;
-    display: inline-block
+.checkbox-container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
 }
 
-.no-selection {
-    -webkit-touch-callout: none;
-    /* iOS Safari */
-    -webkit-user-select: none;
-    /* Safari */
-    -khtml-user-select: none;
-    /* Konqueror HTML */
-    -moz-user-select: none;
-    /* Old versions of Firefox */
-    -ms-user-select: none;
-    /* Internet Explorer/Edge */
-    user-select: none;
+.checkmark {
+    position: absolute;
+    top: 3px;
+    left: 0;
+    height: 14px;
+    width: 14px;
+    /* background-color: #eee; */
+    border: 1px solid #2196F3;
+
 }
 
-.button-red {
-    background-color: tomato;
-}
-
-.button-yellow {
-    background-color: gold;
-}
-
-.button-green {
-    background-color: limegreen;
-}
-
-.console-dir {
-    color: dodgerblue;
-}
-
-@keyframes animatebottom {
-    from {
-        bottom: -100px;
-        opacity: 0
-    }
-    to {
-        bottom: 0;
-        opacity: 1
-    }
+.checkbox-container input:checked~.checkmark {
+    background-color: #2196F3;
 }
 
 @media all and (max-width: 1920px) {
