--- a/raon-control/document.css
+++ b/raon-control/document.css
@@ -17,7 +17,7 @@ body {
     text-align: center;
 }
 
-#classification {
+#classify {
     width: 800px;
     margin: auto;
     margin-top: 30px;
@@ -82,6 +82,9 @@ body {
     background-image: url('images/document-bg.png');
     background-repeat: no-repeat;
     background-position: 200px -30px;
+    animation: animatebottom 1s;
+    opacity: 0;
+    animation-fill-mode: forwards;
 }
 
 .document-content{
@@ -122,7 +125,16 @@ body {
     font-size: 18px;
 }
 
-
+@keyframes animatebottom {
+    from {
+        bottom: -50px;
+        opacity: 0
+    }
+    to {
+        bottom: 0;
+        opacity: 1
+    }
+}
 
 @media all and (max-width: 1920px) {
     body {
