--- a/raon-control/main.css
+++ b/raon-control/main.css
@@ -398,6 +398,27 @@
     font-weight: 300;
 }
 
+.fade-animation {
+    animation: animatefade 1s;
+    opacity: 0;
+    animation-fill-mode: forwards;
+}
+
+@keyframes animatefade {
+    0% {
+        opacity: 0;
+        transform: scale3d(0.9, 0.9, 1);
+    }
+    /* 50% {
+        opacity: 0.5;
+        transform: scale3d(1.2, 1.2, 1);
+    } */
+    100% {
+        opacity: 1;
+        transform: scale3d(1, 1, 1);
+    }
+}
+
 @keyframes percentage {
     from {
         stroke-dashoffset: 440;
