monitoring page showup test

--- a/raon-control/main.css
+++ b/raon-control/main.css
@@ -407,7 +407,7 @@
 @keyframes animatefade {
     from {
         opacity: 0;
-        bottom: -10px
+        bottom: -10px;
         /* transform: scale3d(1.1, 1.1, 1); */
     }
 
