--- a/raon-control/main.css
+++ b/raon-control/main.css
@@ -280,6 +280,28 @@
     content: "  V";
 }
 
+#vacuum-widget {
+    position: relative;
+    left: 20px;
+    top: 15px;
+    width: 47px;
+    height: 113px;
+    /* background-color: rgba(0, 64, 96, 0.5); */
+    /* border: 1px solid rgba(0, 84, 188, 0.5); */
+    /* border-radius: 8px; */
+}
+
+.vacuum-particle {
+    position: absolute;
+    left: var(--left);
+    top: var(--top);
+    border-radius: 1px;
+    background: #00a99d;
+    width: 2px;
+    height: 2px;
+    transition: transform 0.5s ease-out;
+}
+
 #moduleSVG {
     width: 446;
     height: 682;
@@ -410,7 +432,6 @@
         bottom: -10px;
         /* transform: scale3d(1.1, 1.1, 1); */
     }
-
     to {
         opacity: 1;
         bottom: 0px;
