apply doughnut chat animation

--- a/raon-control/main.css
+++ b/raon-control/main.css
@@ -33,6 +33,14 @@
     left: 10px;
 }
 
+#ioc-value {
+    color: white;
+    font-size: 30px;
+    /* text-align: center; */
+    font-family: "Roboto-Thin";
+    line-height: 100%;
+}
+
 /* .pvname {
     color: dimgray;
     font-size: 15px;
