--- a/raon-control/monitoring.css
+++ b/raon-control/monitoring.css
@@ -164,11 +164,11 @@
     stroke-width: 14;
 }
 
-.doughnutForeground {
+/* .doughnutForeground {
     animation-name: percentage;
     animation-duration: 0.5s;
 
-}
+} */
 
 .doughnutChartText {
     position: absolute;
@@ -195,8 +195,8 @@
     stroke-dasharray: 503;
     stroke-dashoffset: 503;
     transform: translate(7px, 7px);
-    animation-timing-function: ease-out;
-    animation-fill-mode: forwards;
+    /* animation-timing-function: ease-out; */
+    /* animation-fill-mode: forwards; */
 }
 
 .liquid-box {
@@ -362,14 +362,14 @@
     }
 }
 
-@keyframes percentage {
+/* @keyframes percentage {
     from {
         stroke-dashoffset: 503;
     }
     to {
         stroke-dashoffset: var(--chartValue);
     }
-}
+} */
 
 @keyframes timing {
     from {
