--- a/raon-control/monitoring.css
+++ b/raon-control/monitoring.css
@@ -49,6 +49,7 @@
     position: relative;
     margin: 10px;
     background-color: rgba(50, 50, 50, 0.3);
+    z-index: -2;
 }
 
 .grid-1x1 {
@@ -74,6 +75,11 @@
 .grid-3x3 {
     width: 880px;
     height: 880px;
+}
+
+.grid-4x2 {
+    width: 1180px;
+    height: 580px;
 }
 
 .w3-animate-left {
@@ -200,11 +206,11 @@
 }
 
 .liquid-box {
-    width: 176px;
-    height: 176px;
-    border: 2px solid rgba(0, 84, 188, 0.5);
+    width: 160px;
+    height: 160px;
+    border: 2px solid rgba(0, 84, 188, 0.3);
     border-radius: 50%;
-    line-height: 180px;
+    line-height: 160px;
     text-align: center;
     font-size: 40px;
     left: 52px;
@@ -215,12 +221,12 @@
 
 .subBox {
     position: absolute;
-    width: 300px;
-    height: 300px;
-    top: 176px;
+    width: 260px;
+    height: 260px;
+    top: 160px;
     left: -62px;
     /* transform: translateY(0px); */
-    background: var(--b);
+    background-color: var(--backgroundColor);
     border-radius: 40%;
     z-index: -1;
 }
@@ -325,6 +331,18 @@
     animation: animatefade 1s;
     opacity: 0;
     animation-fill-mode: forwards;
+}
+
+.compressor-container {
+    position: absolute;
+    width: 160px;
+    height: 160px;
+    left: 60px;
+    top: 60px;
+}
+
+.compressor-animation {
+    animation: rotaion 
 }
 
 @keyframes animatefade {
