fix chart toolip adding by z index

--- a/raon-control/main.css
+++ b/raon-control/main.css
@@ -346,6 +346,8 @@
     font-size: 28px;
     text-align: center;
     font-family: "Roboto-Thin";
+    opacity: 0.0;
+    transition: all 4s ease-out;
 }
 
 .moduleNavi-contain {
