--- a/raon-control/monitoring.css
+++ b/raon-control/monitoring.css
@@ -506,6 +506,16 @@
     animation: animatefade 1s linear infinite alternate-reverse;
 }
 
+.page3 {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    color: white;
+    font-size: 40px;
+    justify-content: center;
+    align-items: center;
+}
+
 @keyframes animatefade {
     from {
         opacity: 0;
