--- a/raon-control/login.css
+++ b/raon-control/login.css
@@ -1,10 +1,4 @@
-body {
-    /* background:url('images/grid.png') repeat, url('images/shadowbg.png') center 0 no-repeat; */
-    /* background-color: black; */
-}
-
 #body {
-    /* background-color: thistle; */
     overflow: hidden;
     position: relative;
 }
@@ -19,12 +13,11 @@ body {
     align-items: flex-end;
     color: white;
     font-size: 18px;
-    /* background-color: orange; */
     bottom: 30px;
 }
 
-#id, #password {
-    /* box-sizing: border-box; */
+#id,
+#password {
     width: 100px;
     height: 20px;
     border: none;
@@ -33,7 +26,6 @@ body {
     color: white;
     outline: none;
     font-size: 16px;
-    /* background-color: gray; */
     padding-left: 25px;
     padding-bottom: 5px;
     font-family: "Roboto-Thin";
@@ -43,7 +35,6 @@ body {
     background-image: url('images/id.svg');
     background-position: 1px 7px;
     background-repeat: no-repeat;
-    /* padding-left: 10px; */
 }
 
 #password {
@@ -56,7 +47,6 @@ body {
     width: 100px;
     height: 32px;
     background-color: #1B75BB;
-    /* background-color: transparent; */
     color: white;
     font-size: 16px;
     outline: none;
@@ -69,7 +59,6 @@ body {
     position: relative;
     width: 500px;
     height: 200px;
-    /* background-color: darkgreen; */
     left: 710px;
     top: 300px;
 }
@@ -81,8 +70,10 @@ body {
     height: 60px;
     left: 0;
     top: 20px;
-    /* background-color: orange ; */
     text-align: center;
+    opacity: 0;
+    animation: showup 3s linear 1.5s forwards;
+    /* filter: blur(2px); */
 }
 
 #control-system {
@@ -92,22 +83,52 @@ body {
     text-align: center;
     font-size: 20px;
     letter-spacing: 6px;
-    /* background-color: darkslateblue; */
+    opacity: 0;
+    animation: showup 3s linear 3s forwards;
 }
 
 #particle {
     /* animation: particleMove 60s linear infinite; */
-    animation: particleMove 1s cubic-bezier(0.075, 0.82, 0.2, 1) forwards;
-
+    /* animation: particleMoveBefore 1.5s cubic-bezier(0.075, 0.82, 0.2, 1) forwards; */
     /* left: 100px; */
 }
 
-@keyframes particleMove {
+.beforeLogin {
+    animation: particleMoveBefore 1.5s cubic-bezier(0.075, 0.82, 0.2, 1) forwards;
+}
+
+.afterfLogin {
+    animation: particleMoveAfter 1.0s ease-in forwards;
+}
+
+@keyframes particleMoveBefore {
     from {
         left: 1920px;
     }
     to {
         left: 800px;
+    }
+}
+
+@keyframes particleMoveAfter {
+    from {
+        left: 800px;
+    }
+    to {
+        left: 0px;
+    }
+}
+
+@keyframes showup {
+    from {
+        /* transform: scale(1.1); */
+        /* filter: blur(2px); */
+        opacity: 0;
+    }
+    to {
+        /* transform: scale(1); */
+        /* filter: blur(0px); */
+        opacity: 1;
     }
 }
 
