--- a/raon-control/login.css
+++ b/raon-control/login.css
@@ -72,8 +72,10 @@
     top: 20px;
     text-align: center;
     opacity: 0;
-    animation: showup 3s linear 1.5s forwards;
+    /* animation: showup 3s linear 1.5s forwards; */
+    transition: all 1s ease-in-out 1.5s;
     /* filter: blur(2px); */
+    /* transform: scale(1.05); */
 }
 
 #control-system {
@@ -84,16 +86,18 @@
     font-size: 20px;
     letter-spacing: 6px;
     opacity: 0;
-    animation: showup 3s linear 3s forwards;
+    /* animation: showup 3s linear 2s forwards; */
+    transition: all 3s linear 3s;
 }
 
 #particle {
     /* animation: particleMove 60s linear infinite; */
     /* animation: particleMoveBefore 1.5s cubic-bezier(0.075, 0.82, 0.2, 1) forwards; */
-    /* left: 100px; */
+    left: 1920px;
+    transition: all 1.5s cubic-bezier(0.075, 0.82, 0.2, 1);
 }
 
-.beforeLogin {
+/* .beforeLogin {
     animation: particleMoveBefore 1.5s cubic-bezier(0.075, 0.82, 0.2, 1) forwards;
 }
 
@@ -117,7 +121,7 @@
     to {
         left: 0px;
     }
-}
+} */
 
 @keyframes showup {
     from {
